<resources>

    <!--strings login layout-->
    <string name="img_DiviHome">Imagen de divi en la vista de login</string>
    <string name="lb_TextoBienvenida">Bienvenido a DIVI</string>
    <string name="btn_Login">Entrar</string>
    <string name="btn_Registrarse">Registrarse</string>
    <string name="et_NombreUsuario">Nombre de Usuario</string>
    <string name="et_Contraseña">Contraseña</string>
    <!--end strings-->

    <!--string nombre de la aplicacion-->
    <string name="app_name">Divi</string>
    <!--fin string-->

    <!--string nombre del mapa -->
    <string name="title_activity_home">Ubicación Actual</string>
    <!--fin string-->

    <!--string menu toolbar-->
    <string name="opt_logOut">Cerrar Sesión</string>
    <!--fin menu-->

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>
