<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jhon.co.divi.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_DiviLogin"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/img_DiviHome"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:focusable="false" />

    <TextView
        android:id="@+id/lb_TextoBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_TextoBienvenida"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:typeface="monospace"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_NombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_NombreUsuario"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:typeface="monospace"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_ContraseñaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_Contraseña"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:typeface="monospace"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btn_Registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Registrarse"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:typeface="monospace"
        android:textStyle="bold" />

</LinearLayout>
